cmake_minimum_required(VERSION 3.20)
project(UDPBroadcastDemo)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast")
add_subdirectory(3rd_party/misc)
add_subdirectory(3rd_party/networking)
add_executable(publisher src/publisher.cpp)
target_link_libraries(publisher cppmisc networking)
add_executable(subscriber src/subscriber.cpp)
target_link_libraries(subscriber cppmisc networking)
